# netui

./: README.md  pyproject.toml
netui/: __init__.py  __main__.py  app.py  config.py  main.py  messages.py  netui.tcss  platform.py
netui/collectors/: __init__.py  bandwidth.py  dns.py  interfaces.py  latency.py  ports.py  routes.py  speed.py  traceroute.py  wifi.py
netui/utils/: __init__.py  async_runner.py  charts.py  formatters.py  history.py  sparkline.py  toast.py
netui/widgets/: __init__.py  bandwidth_panel.py  content_area.py  dns_panel.py  error_banner.py  header.py  help_screen.py  interfaces_panel.py  latency_panel.py  panel_base.py  ports_panel.py  route_panel.py  sidebar.py  speed_panel.py  splash_screen.py  status_bar.py  traceroute_panel.py  wifi_panel.py
tests/: test_collectors.py
tests/fixtures/: netsh_wlan_win10.txt  netsh_wlan_win11.txt  route_print_win10.txt  route_print_win11.txt
